css/stylesheets/MediaGrid.css
.media-grid-view {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.media-grid-view.dark-theme {
  background-color: #000000;
}
.media-grid-view.light-theme {
  background-color: #ffffff;
}

.focused-content-info-container {
  position: absolute;
  width: 100%;
  height: 40%;
  max-width: 100%;
  max-height: 40%;
  top: 15%;
  left: 0;
  padding-left: 5%;
  z-index: 15;
}

.focused-content-info-title-container,
.focused-content-info-description-container {
  width: 40%;
  padding-left: 2.5%;
}

.focused-content-info-title-container {
  max-height: 30%;
}

.focused-content-info-description-container {
  max-height: 50%;
  max-width: 100%;
}

.focused-content-info-title {
  font-size: 3.5em;
}

.focused-content-info-description {
  height: 100%;
  width: 100%;
  font-size: 2em;
}

.focused-content-info-description.ellipsis-text {
  /* overwrite white-space from .ellipsis-text */
  white-space: inherit;
  display: block;
  display: -webkit-box;

  /* cut off after 3 lines */
  height: 4.5em;
  line-height: 1.5em;
  -webkit-line-clamp: 3;

  -webkit-box-orient: vertical;
}

.focused-content-info-title.dark-theme,
.focused-content-info-description.dark-theme,
.media-grid-row-title.dark-theme {
  color: #ffffff;
}

.focused-content-info-title.light-theme,
.focused-content-info-description.light-theme,
.media-grid-row-title.light-theme {
  color: #000000;
}

.focused-content-info-container.focused-content-info-title {
  font-size: 7em;
}

.focused-content-info-container.focused-content-info-description {
  font-size: 4em;
}


.media-grid-rows-window {
  position: absolute;
  top: 55%;
  left: 0%;

  width: 100%;
  height: 45%;
  overflow: hidden;
  z-index: 30;
}

.media-grid-rows-container {
  position: absolute;
  width: 100%;
}

.media-grid-row {
  position: relative;
  top: auto;
  left: 0;
  width: 100%;

  padding-bottom: 0.5em;
}

.media-grid-row.landscape {
  height: 380px;
}

.media-grid-row.poster {
  height: 440px;
}

.media-grid-row-title-container {
  max-width: 40%;
  margin-bottom: 0.75em;
  margin-left: 7.5%;
}

.media-grid-row-title {
  margin: 0;
  font-size: 2.5em;
}

.media-grid-row-thumbnails-container {
  min-height: 60%;
  width: 100%;
}
.media-grid-row-thumbnails-container.poster {
height: 90%;
}

.media-grid-row-thumbnails {
  display: block;
  white-space: nowrap;
  width: 100%;
  height: 100%;
  margin-left: 7.5%;
  padding: 1.5em 0em;
}

.media-grid-thumbnail {
  margin-right: 1em;
  border: solid 0.5em transparent;
}

.media-grid-landscape-thumbnail {
  width: 35vh;
  height: 20vh;
}

.media-grid-poster-thumbnail {
  width: 20vh;
  height: 35vh;
  object-fit: cover;
  overflow: hidden;
}

.focused-thumbnail.light-theme {
  border: solid 0.5em #000000;
}

.focused-thumbnail.dark-theme {
  border: solid 0.5em #ffffff;
}

